--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -39,3 +39,15 @@ ul{
 
 .fs-loop(10,24);
 .pos-loop(5,50);
+
+//mui
+.mui-table-view.top-noline::before{
+	height: 0;
+}
+.mui-table-view.bottom-noline::after{
+	height: 0;
+}
+.mui-table-view.noline::before,
+.mui-table-view.noline::after{
+	height: 0;
+}
