--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -19,6 +19,15 @@ ul {
 ul li {
   padding: 0;
 }
+.txt-left {
+  text-align: left;
+}
+.txt-center {
+  text-align: center;
+}
+.txt-right {
+  text-align: right;
+}
 .fs-10 {
   font-size: 10px !important;
 }
@@ -65,244 +74,244 @@ ul li {
   font-size: 24px !important;
 }
 .mt5 {
-  margin-top: 5px;
+  margin-top: 5px !important;
 }
 .mb5 {
-  margin-bottom: 5px;
+  margin-bottom: 5px !important;
 }
 .ml5 {
-  margin-left: 5px;
+  margin-left: 5px !important;
 }
 .mr5 {
-  margin-right: 5px;
+  margin-right: 5px !important;
 }
 .pt5 {
-  padding-top: 5px;
+  padding-top: 5px !important;
 }
 .pb5 {
-  padding-bottom: 5px;
+  padding-bottom: 5px !important;
 }
 .pl5 {
-  padding-left: 5px;
+  padding-left: 5px !important;
 }
 .pr5 {
-  padding-right: 5px;
+  padding-right: 5px !important;
 }
 .mt10 {
-  margin-top: 10px;
+  margin-top: 10px !important;
 }
 .mb10 {
-  margin-bottom: 10px;
+  margin-bottom: 10px !important;
 }
 .ml10 {
-  margin-left: 10px;
+  margin-left: 10px !important;
 }
 .mr10 {
-  margin-right: 10px;
+  margin-right: 10px !important;
 }
 .pt10 {
-  padding-top: 10px;
+  padding-top: 10px !important;
 }
 .pb10 {
-  padding-bottom: 10px;
+  padding-bottom: 10px !important;
 }
 .pl10 {
-  padding-left: 10px;
+  padding-left: 10px !important;
 }
 .pr10 {
-  padding-right: 10px;
+  padding-right: 10px !important;
 }
 .mt15 {
-  margin-top: 15px;
+  margin-top: 15px !important;
 }
 .mb15 {
-  margin-bottom: 15px;
+  margin-bottom: 15px !important;
 }
 .ml15 {
-  margin-left: 15px;
+  margin-left: 15px !important;
 }
 .mr15 {
-  margin-right: 15px;
+  margin-right: 15px !important;
 }
 .pt15 {
-  padding-top: 15px;
+  padding-top: 15px !important;
 }
 .pb15 {
-  padding-bottom: 15px;
+  padding-bottom: 15px !important;
 }
 .pl15 {
-  padding-left: 15px;
+  padding-left: 15px !important;
 }
 .pr15 {
-  padding-right: 15px;
+  padding-right: 15px !important;
 }
 .mt20 {
-  margin-top: 20px;
+  margin-top: 20px !important;
 }
 .mb20 {
-  margin-bottom: 20px;
+  margin-bottom: 20px !important;
 }
 .ml20 {
-  margin-left: 20px;
+  margin-left: 20px !important;
 }
 .mr20 {
-  margin-right: 20px;
+  margin-right: 20px !important;
 }
 .pt20 {
-  padding-top: 20px;
+  padding-top: 20px !important;
 }
 .pb20 {
-  padding-bottom: 20px;
+  padding-bottom: 20px !important;
 }
 .pl20 {
-  padding-left: 20px;
+  padding-left: 20px !important;
 }
 .pr20 {
-  padding-right: 20px;
+  padding-right: 20px !important;
 }
 .mt25 {
-  margin-top: 25px;
+  margin-top: 25px !important;
 }
 .mb25 {
-  margin-bottom: 25px;
+  margin-bottom: 25px !important;
 }
 .ml25 {
-  margin-left: 25px;
+  margin-left: 25px !important;
 }
 .mr25 {
-  margin-right: 25px;
+  margin-right: 25px !important;
 }
 .pt25 {
-  padding-top: 25px;
+  padding-top: 25px !important;
 }
 .pb25 {
-  padding-bottom: 25px;
+  padding-bottom: 25px !important;
 }
 .pl25 {
-  padding-left: 25px;
+  padding-left: 25px !important;
 }
 .pr25 {
-  padding-right: 25px;
+  padding-right: 25px !important;
 }
 .mt30 {
-  margin-top: 30px;
+  margin-top: 30px !important;
 }
 .mb30 {
-  margin-bottom: 30px;
+  margin-bottom: 30px !important;
 }
 .ml30 {
-  margin-left: 30px;
+  margin-left: 30px !important;
 }
 .mr30 {
-  margin-right: 30px;
+  margin-right: 30px !important;
 }
 .pt30 {
-  padding-top: 30px;
+  padding-top: 30px !important;
 }
 .pb30 {
-  padding-bottom: 30px;
+  padding-bottom: 30px !important;
 }
 .pl30 {
-  padding-left: 30px;
+  padding-left: 30px !important;
 }
 .pr30 {
-  padding-right: 30px;
+  padding-right: 30px !important;
 }
 .mt35 {
-  margin-top: 35px;
+  margin-top: 35px !important;
 }
 .mb35 {
-  margin-bottom: 35px;
+  margin-bottom: 35px !important;
 }
 .ml35 {
-  margin-left: 35px;
+  margin-left: 35px !important;
 }
 .mr35 {
-  margin-right: 35px;
+  margin-right: 35px !important;
 }
 .pt35 {
-  padding-top: 35px;
+  padding-top: 35px !important;
 }
 .pb35 {
-  padding-bottom: 35px;
+  padding-bottom: 35px !important;
 }
 .pl35 {
-  padding-left: 35px;
+  padding-left: 35px !important;
 }
 .pr35 {
-  padding-right: 35px;
+  padding-right: 35px !important;
 }
 .mt40 {
-  margin-top: 40px;
+  margin-top: 40px !important;
 }
 .mb40 {
-  margin-bottom: 40px;
+  margin-bottom: 40px !important;
 }
 .ml40 {
-  margin-left: 40px;
+  margin-left: 40px !important;
 }
 .mr40 {
-  margin-right: 40px;
+  margin-right: 40px !important;
 }
 .pt40 {
-  padding-top: 40px;
+  padding-top: 40px !important;
 }
 .pb40 {
-  padding-bottom: 40px;
+  padding-bottom: 40px !important;
 }
 .pl40 {
-  padding-left: 40px;
+  padding-left: 40px !important;
 }
 .pr40 {
-  padding-right: 40px;
+  padding-right: 40px !important;
 }
 .mt45 {
-  margin-top: 45px;
+  margin-top: 45px !important;
 }
 .mb45 {
-  margin-bottom: 45px;
+  margin-bottom: 45px !important;
 }
 .ml45 {
-  margin-left: 45px;
+  margin-left: 45px !important;
 }
 .mr45 {
-  margin-right: 45px;
+  margin-right: 45px !important;
 }
 .pt45 {
-  padding-top: 45px;
+  padding-top: 45px !important;
 }
 .pb45 {
-  padding-bottom: 45px;
+  padding-bottom: 45px !important;
 }
 .pl45 {
-  padding-left: 45px;
+  padding-left: 45px !important;
 }
 .pr45 {
-  padding-right: 45px;
+  padding-right: 45px !important;
 }
 .mt50 {
-  margin-top: 50px;
+  margin-top: 50px !important;
 }
 .mb50 {
-  margin-bottom: 50px;
+  margin-bottom: 50px !important;
 }
 .ml50 {
-  margin-left: 50px;
+  margin-left: 50px !important;
 }
 .mr50 {
-  margin-right: 50px;
+  margin-right: 50px !important;
 }
 .pt50 {
-  padding-top: 50px;
+  padding-top: 50px !important;
 }
 .pb50 {
-  padding-bottom: 50px;
+  padding-bottom: 50px !important;
 }
 .pl50 {
-  padding-left: 50px;
+  padding-left: 50px !important;
 }
 .pr50 {
-  padding-right: 50px;
+  padding-right: 50px !important;
 }
 .mui-table-view.top-noline::before {
   height: 0;
