--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -7,14 +7,14 @@
 }
 //margin,padding设值
 .pos-loop(@i, @n) when (@i <= @n) {
-	.mt@{i} {margin-top: unit(@i,px);}
-	.mb@{i} {margin-bottom: unit(@i,px);}
-	.ml@{i} {margin-left: unit(@i,px);}
-	.mr@{i} {margin-right: unit(@i,px);}
-	.pt@{i} {padding-top: unit(@i,px);}
-	.pb@{i} {padding-bottom: unit(@i,px);}
-	.pl@{i} {padding-left: unit(@i,px);}
-	.pr@{i} {padding-right: unit(@i,px);}
+	.mt@{i} {margin-top: unit(@i,px)!important;}
+	.mb@{i} {margin-bottom: unit(@i,px)!important;}
+	.ml@{i} {margin-left: unit(@i,px)!important;}
+	.mr@{i} {margin-right: unit(@i,px)!important;}
+	.pt@{i} {padding-top: unit(@i,px)!important;}
+	.pb@{i} {padding-bottom: unit(@i,px)!important;}
+	.pl@{i} {padding-left: unit(@i,px)!important;}
+	.pr@{i} {padding-right: unit(@i,px)!important;}
 	.pos-loop((@i + 5), @n);
 }
 
@@ -36,6 +36,9 @@ ul{
         padding: 0;
     }
 }
+.txt-left{text-align: left;}
+.txt-center{text-align: center;}
+.txt-right{text-align: right;}
 
 .fs-loop(10,24);
 .pos-loop(5,50);
